- Adding styles for Popovers - Need Help interaction style on Mobile -  Fix UI issues

--- a/static/scss/common/_modal.scss
+++ b/static/scss/common/_modal.scss
@@ -3,7 +3,7 @@
     .form-group + .form-group{ margin-top: 18px !important;}
     .form-group{
       small{
-        font-size: 84.6% !important;
+        font-size: 87% !important;
         color: #9D9D9D;
       }
     }
@@ -23,11 +23,11 @@
 
     .modal-header {
       .modal-title {
-        margin: 0 0 25px;
+        margin: 0 0 20px;
         color: $black;
       }
       p {
-        margin: 0 0 25px;
+        margin: 0 0 22px;
         color: $black;
       }
       .close {
@@ -40,7 +40,6 @@
     .modal-footer {
       padding: 0;
     }
-
   }
 
   &.noTopBorder {
