--- a/static/scss/common/_variables.scss
+++ b/static/scss/common/_variables.scss
@@ -65,6 +65,7 @@ $ash-white         :   #f3f4f6;
 $ash-hard          :   #f5f5f5;
 $dark-gray         :   #4a4a4a;
 $sky-blue          :   #e2eff7;
+$blue-sharp        :   #2A3EC6;
 $light-gray        :   #eeeeee;
 $bg-login-footer   :   #251F2E;
 
